July 31, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/spu.c: Silenced warning on Mac OS X and FreeBSD.
 * macosx/plugins/DFInput/SDL/include/SDL_haptic.h: Upgraded to SDL 1.3 Beta.
 * macosx/plugins/DFInput/SDL/include/SDL_error.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/begin_code.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/close_code.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_endian.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_joystick.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_main.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_stdinc.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_platform.h: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_config.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/joystick/SDL_joystick.c: Likewise.
 * macosx/plugins/DFInput/SDL/src/joystick/darwin/SDL_sysjoystick.c: Likewise.
 * macosx/plugins/DFInput/SDL/src/joystick/darwin/SDL_sysjoystick_c.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/joystick/SDL_sysjoystick.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/joystick/SDL_joystick_c.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/SDL.c: Likewise.
 * macosx/plugins/DFInput/SDL/src/SDL_error_c.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/haptic/SDL_syshaptic.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/haptic/SDL_haptic_c.h: Likewise.
 * macosx/plugins/DFInput/SDL/src/haptic/darwin/SDL_syshaptic.c: Likewise.
 * macosx/plugins/DFInput/SDL/src/haptic/SDL_haptic.c: Likewise.
 * macosx/plugins/DFInput/SDL/src/SDL_error.c: Likewise.
 * macosx/plugins/DFInput/SDL/include/SDL_name.h: Deleted.
 * macosx/plugins/DFInput/SDL/include/SDL_version.h: Likewise.
 * macosx/plugins/DFInput/DFInput.xcodeproj/project.pbxproj: Updated.
 * macosx/plugins/DFInput/macsrc/cfg.h: Include SDL_joystick.h.
 * plugins/dfinput/pad.h: Likewise.
 * macosx/PcsxController.h: Removed some useless stuff.